--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1" ,
+    "scss": "node-sass -o css/ css/ "
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,10 @@
     "express": "^4.18.2",
     "jquery": "^3.7.0",
     "lite-server": "^2.6.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "sass": "^1.66.1"
+  },
+  "devDependencies": {
+    "node-sass": "^9.0.0"
   }
 }
